fixed the shift is not inside a table row in Teams day view
fixed the shift is not inside a table row in Teams day view

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -634,6 +634,8 @@ team-schedule-datepicker {
 		td {
 			padding: 5px 0 5px 0;
 			border-bottom: none;
+			line-height: 1.42857143;
+			vertical-align: top;
 		}
 
 		.person-name-column {
